--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -159,13 +159,26 @@ jobs:
       with:
         name: managedSolutions
         path: ${{ inputs.solution_release_folder}}
-    - name: Import solution to prod env
-      uses: microsoft/powerplatform-actions/import-solution@v0
-      with:
-        environment-url: ${{env.ENVIRONMENT_URL}}
-        app-id: ${{env.CLIENT_ID}}
-        client-secret: ${{ secrets.PowerPlatformSPN }}
-        tenant-id: ${{env.TENANT_ID}}
-        solution-file: ${{ inputs.solution_release_folder}}/${{ inputs.solution_name }}_managed.zip
-        force-overwrite: true
-        publish-changes: true
+    # - name: Import solution to prod env
+    #   uses: microsoft/powerplatform-actions/import-solution@v0
+    #   with:
+    #     environment-url: ${{env.ENVIRONMENT_URL}}
+    #     app-id: ${{env.CLIENT_ID}}
+    #     client-secret: ${{ secrets.PowerPlatformSPN }}
+    #     tenant-id: ${{env.TENANT_ID}}
+    #     solution-file: ${{ inputs.solution_release_folder}}/${{ inputs.solution_name }}_managed.zip
+    #     force-overwrite: true
+    #     publish-changes: true
+
+  Release-solution-ALMLab:
+    uses: ./.github/workflows/release-solution-with-inputs.yml
+    with:
+      #You can specify the solution name here
+      solution_name: ALMLab
+      #Update your values here
+      BUILD_ENVIRONMENT_URL: ${{env.ENVIRONMENT_URL}}
+      PRODUCTION_ENVIRONMENT_URL: ${{env.ENVIRONMENT_URL}}
+      CLIENT_ID: ${{env.CLIENT_ID}}
+      TENANT_ID: ${{env.TENANT_ID}}
+    secrets:
+      envSecret: ${{ secrets.PowerPlatformSPN }}
