--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -143,22 +143,22 @@ jobs:
         name: managedSolutions
         path: ${{ inputs.solution_shipping_folder}}/
 
-  release-to-staging:
-    needs: [ convert-to-managed ]
-    runs-on: windows-latest
-    env:
-      RUNNER_DEBUG: 1
+  # release-to-staging:
+  #   needs: [ convert-to-managed ]
+  #   runs-on: windows-latest
+  #   env:
+  #     RUNNER_DEBUG: 1
 
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        lfs: true
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #     with:
+  #       lfs: true
 
-    - name: Fetch the ready to ship solution from GH artifact store
-      uses: actions/download-artifact@v2
-      with:
-        name: managedSolutions
-        path: ${{ inputs.solution_release_folder}}
+  #   - name: Fetch the ready to ship solution from GH artifact store
+  #     uses: actions/download-artifact@v2
+  #     with:
+  #       name: managedSolutions
+  #       path: ${{ inputs.solution_release_folder}}
     # - name: Import solution to prod env
     #   uses: microsoft/powerplatform-actions/import-solution@v0
     #   with:
@@ -169,16 +169,3 @@ jobs:
     #     solution-file: ${{ inputs.solution_release_folder}}/${{ inputs.solution_name }}_managed.zip
     #     force-overwrite: true
     #     publish-changes: true
-
-  Release-solution-ALMLab:
-    uses: ./.github/workflows/release-solution-with-inputs.yml
-    with:
-      #You can specify the solution name here
-      solution_name: ALMLab
-      #Update your values here
-      BUILD_ENVIRONMENT_URL: ${{env.ENVIRONMENT_URL}}
-      PRODUCTION_ENVIRONMENT_URL: ${{env.ENVIRONMENT_URL}}
-      CLIENT_ID: ${{env.CLIENT_ID}}
-      TENANT_ID: ${{env.TENANT_ID}}
-    secrets:
-      envSecret: ${{ secrets.PowerPlatformSPN }}
