--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -3,6 +3,8 @@ name: export-and-branch-solution
 #  unpack it and prepare, commit and push a git branch with the changes
 
 on:
+  release:
+      types: [created]
   workflow_dispatch:
     inputs:
       # Change this value
@@ -143,29 +145,28 @@ jobs:
         name: managedSolutions
         path: ${{ inputs.solution_shipping_folder}}/
 
-  # release-to-staging:
-  #   needs: [ convert-to-managed ]
-  #   runs-on: windows-latest
-  #   env:
-  #     RUNNER_DEBUG: 1
+  release-to-staging:
+    runs-on: windows-latest
+    env:
+      RUNNER_DEBUG: 1
 
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #     with:
-  #       lfs: true
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        lfs: true
 
-  #   - name: Fetch the ready to ship solution from GH artifact store
-  #     uses: actions/download-artifact@v2
-  #     with:
-  #       name: managedSolutions
-  #       path: ${{ inputs.solution_release_folder}}
-    # - name: Import solution to prod env
-    #   uses: microsoft/powerplatform-actions/import-solution@v0
-    #   with:
-    #     environment-url: ${{env.ENVIRONMENT_URL}}
-    #     app-id: ${{env.CLIENT_ID}}
-    #     client-secret: ${{ secrets.PowerPlatformSPN }}
-    #     tenant-id: ${{env.TENANT_ID}}
-    #     solution-file: ${{ inputs.solution_release_folder}}/${{ inputs.solution_name }}_managed.zip
-    #     force-overwrite: true
-    #     publish-changes: true
+    - name: Fetch the ready to ship solution from GH artifact store
+      uses: actions/download-artifact@v2
+      with:
+        name: managedSolutions
+        path: ${{ inputs.solution_release_folder}}
+    - name: Import solution to prod env
+      uses: microsoft/powerplatform-actions/import-solution@v0
+      with:
+        environment-url: ${{env.ENVIRONMENT_URL}}
+        app-id: ${{env.CLIENT_ID}}
+        client-secret: ${{ secrets.PowerPlatformSPN }}
+        tenant-id: ${{env.TENANT_ID}}
+        solution-file: ${{ inputs.solution_release_folder}}/${{ inputs.solution_name }}_managed.zip
+        force-overwrite: true
+        publish-changes: true
