fix release jobs

--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -146,6 +146,7 @@ jobs:
         path: ${{ inputs.solution_shipping_folder}}/
 
   release-to-staging:
+    needs: convert-to-managed
     runs-on: windows-latest
     env:
       RUNNER_DEBUG: 1
