--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -28,7 +28,7 @@ on:
       solution_shipping_folder:
         description: 'folder name for staging the exported solution *do not change*'        
         type: string
-        default: out/ship/
+        default: out/ship
       solution_outbound_folder:
         description: 'staging the unpacked solution folder before check-in *do not change*'
         type: string
@@ -40,7 +40,7 @@ on:
       solution_release_folder:
        description: 'folder where the released binaries are going to be hosted *do not change*'
        type: string
-       default: out/solutions
+       default: out/ship
     secrets:
       envSecret:
         description: 'The secret value for authentication using SPN'
