fix release jobs

--- a/.github/workflows/export-and-branch-solution.yml
+++ b/.github/workflows/export-and-branch-solution.yml
@@ -4,7 +4,7 @@ name: export-and-branch-solution
 
 on:
   release:
-      types: [created]
+      types: [published]
   workflow_dispatch:
     inputs:
       # Change this value
