--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -5,51 +5,19 @@ name: export-and-branch-solution
 on:
   release:
       types: [published]
-  workflow_dispatch:
-    inputs:
-      # Change this value
-      solution_name:
-        description: 'name of the solution to worked on from Power Platform'
-        required: true
-        default: ALMLab
-       #Do Not change these values
-      solution_exported_folder:
-        description: 'folder name for staging the exported solution *do not change*'
-        required: true
-        default: out/exported/
-      solution_folder:
-        description: 'staging the unpacked solution folder before check-in *do not change*'
-        required: true
-        default: out/solutions/
-      solution_target_folder: 
-       description: 'folder name to be created and checked in *do not change*'
-       required: true
-       default: solutions/
-      solution_shipping_folder:
-        description: 'folder name for staging the exported solution *do not change*'        
-        type: string
-        default: out/ship
-      solution_outbound_folder:
-        description: 'staging the unpacked solution folder before check-in *do not change*'
-        type: string
-        default: out/solutions/
-      solution_source_folder: 
-       description: 'folder name to be created and checked in *do not change*'
-       type: string
-       default: solutions/
-      solution_release_folder:
-       description: 'folder where the released binaries are going to be hosted *do not change*'
-       type: string
-       default: out/ship
-    secrets:
-      envSecret:
-        description: 'The secret value for authentication using SPN'
-        required: true       
 env:
 #edit your values here
   ENVIRONMENT_URL: 'https://org3c975e83.crm7.dynamics.com'
   CLIENT_ID: 'e780b8b2-eb83-4a9b-a45f-1526ef9b2c34'
   TENANT_ID: 'e0cd32dc-b9c0-48dd-82e4-98f2490b4655'
+  SOLUTION_NAME: 'ALMLab'
+  SOLUTION_EXPORTED_FOLDER: 'out/exported/'
+  SOLUTION_FOLDER: 'out/solutions/'
+  SOLUTION_TARGET_FOLDER: 'solutions/'
+  SOLUTION_SOURCE_FOLDER: 'solutions/'
+  SOLUTION_OUTBOUND_FOLDER: 'out/solutions/'
+  SOLUTION_SHIPPING_FOLDER: 'out/ship'
+  SOLUTION_RELEASE_FOLDER: 'out/ship'
 
 jobs:
   export-from-dev:
@@ -79,22 +47,22 @@ jobs:
         app-id: ${{env.CLIENT_ID}}
         client-secret: ${{ secrets.PowerPlatformSPN }}
         tenant-id: ${{env.TENANT_ID}}
-        solution-name: ${{ github.event.inputs.solution_name }}
-        solution-output-file: ${{ github.event.inputs.solution_exported_folder}}/${{ github.event.inputs.solution_name }}.zip
+        solution-name: ${{env.SOLUTION_NAME}}
+        solution-output-file: ${{env.SOLUTION_EXPORTED_FOLDER}}/${{env.SOLUTION_NAME}}.zip
 
     - name: unpack-solution action
       uses: microsoft/powerplatform-actions/unpack-solution@v0
       with:
-        solution-file: ${{ github.event.inputs.solution_exported_folder}}/${{ github.event.inputs.solution_name }}.zip
-        solution-folder: ${{ github.event.inputs.solution_folder}}/${{ github.event.inputs.solution_name }}
+        solution-file: ${{env.SOLUTION_EXPORTED_FOLDER}}/${{env.SOLUTION_NAME}}.zip
+        solution-folder: ${{env.SOLUTION_FOLDER}}/${{env.SOLUTION_NAME}}
         solution-type: 'Unmanaged'
         overwrite-files: true
 
     - name: branch-solution, prepare it for a PullRequest
       uses: microsoft/powerplatform-actions/branch-solution@v0
       with:
-        solution-folder: ${{ github.event.inputs.solution_folder}}/${{ github.event.inputs.solution_name }}
-        solution-target-folder: ${{ github.event.inputs.solution_target_folder}}/${{ github.event.inputs.solution_name }}
+        solution-folder: ${{env.SOLUTION_FOLDER}}/${{env.SOLUTION_NAME}}
+        solution-target-folder: ${{env.SOLUTION_TARGET_FOLDER}}/${{env.SOLUTION_NAME}}
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         allow-empty-commit: true
 
@@ -113,8 +81,8 @@ jobs:
     - name: Pack solution
       uses: microsoft/powerplatform-actions/pack-solution@v0
       with:
-        solution-folder: ${{ inputs.solution_source_folder}}/${{ inputs.solution_name }}
-        solution-file: ${{ inputs.solution_outbound_folder}}/${{ inputs.solution_name }}.zip
+        solution-folder: ${{env.SOLUTION_SOURCE_FOLDER}}/${{env.SOLUTION_NAME}}
+        solution-file: ${{env.SOLUTION_OUTBOUND_FOLDER}}/${{env.SOLUTION_NAME}}.zip
         solution-type: Unmanaged
 
     - name: Import solution as unmanaged to build env
@@ -124,7 +92,7 @@ jobs:
         app-id: ${{env.CLIENT_ID}}
         client-secret: ${{ secrets.PowerPlatformSPN }}
         tenant-id: ${{env.TENANT_ID}}
-        solution-file: ${{ inputs.solution_outbound_folder}}/${{ inputs.solution_name }}.zip
+        solution-file: ${{env.SOLUTION_OUTBOUND_FOLDER}}/${{env.SOLUTION_NAME}}.zip
         force-overwrite: true
         publish-changes: true
 
@@ -135,15 +103,15 @@ jobs:
         app-id: ${{env.CLIENT_ID}}
         client-secret: ${{ secrets.PowerPlatformSPN }}
         tenant-id: ${{env.TENANT_ID}}
-        solution-name: ${{ inputs.solution_name }}
+        solution-name: ${{env.SOLUTION_NAME}}
         managed: true
-        solution-output-file: ${{ inputs.solution_shipping_folder}}/${{ inputs.solution_name }}.zip
+        solution-output-file: ${{env.SOLUTION_SHIPPING_FOLDER}}/${{env.SOLUTION_NAME}}.zip
 
     - name: Upload the ready to ship solution to GH artifact store
       uses: actions/upload-artifact@v2
       with:
         name: managedSolutions
-        path: ${{ inputs.solution_shipping_folder}}/
+        path: ${{env.SOLUTION_SHIPPING_FOLDER}}/
 
   release-to-staging:
     needs: convert-to-managed
@@ -160,7 +128,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: managedSolutions
-        path: ${{ inputs.solution_release_folder}}
+        path: ${{env.SOLUTION_RELEASE_FOLDER}}
     - name: Import solution to prod env
       uses: microsoft/powerplatform-actions/import-solution@v0
       with:
@@ -168,6 +136,6 @@ jobs:
         app-id: ${{env.CLIENT_ID}}
         client-secret: ${{ secrets.PowerPlatformSPN }}
         tenant-id: ${{env.TENANT_ID}}
-        solution-file: ${{ inputs.solution_release_folder}}/${{ inputs.solution_name }}.zip
+        solution-file: ${{env.SOLUTION_RELEASE_FOLDER}}/${{env.SOLUTION_NAME}}.zip
         force-overwrite: true
         publish-changes: true
